# pwd_maker

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  startup.bat  startup.ps1  startup.sh  tailwind.config.js
scripts/: startup.bat  startup.ps1  startup.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: generate.rs  mod.rs  vault.rs
src/components/: OutputBox.tsx  PasswordOptions.tsx  StrengthMeter.tsx
src/utils/: api.ts  clipboard.ts  strength.ts
